...
                Button("New…") {
                 
                    DocumentActions.createNewDocumentWithSavePanel()
                    dismiss()
                 
                }
                .accessibilityIdentifier("New...")
                .keyboardShortcut(.defaultAction)
            }
            
            List {
                ForEach(documents.prefix(8), id: \.self) { doc in
                    Button {
...
